# plugin-sdk

./: .gitattributes  .gitignore  CMakeLists.txt  Installer.lnk  LICENSE  README.md  README_breaking_changes.md  clean.bat  mingw-build.bat  plugin.sln  plugin_vs2010.sln  premake5.lua  premake_clean.bat  premake_vs2010.bat  premake_vs2012.bat  premake_vs2013.bat  premake_vs2015.bat  premake_vs_codeblocks.bat  project.lua  toolchain-linux-i686-w64-mingw32-toolchain.cmake
plugin_II/: CMakeLists.txt  plugin_II.h
plugin_II/game_II/: CAudioManager.cpp  CAudioManager.h  CCamera.cpp  CCamera.h  CCar.cpp  CCar.h  CCarManager.cpp  CCarManager.h  CChar.cpp  CChar.h  CCollisionBox.cpp  CCollisionBox.h  CEncodedVector.cpp  CEncodedVector.h  CFileMgr.cpp  CFileMgr.h  CFont.cpp  CFont.h  CGame.cpp  CGame.h  CGeneral.cpp  CGeneral.h  CGlobal.cpp  CGlobal.h  CHud.cpp  CHud.h  CKeybrd.cpp  CKeybrd.h  CMenuManager.cpp  CMenuManager.h  CObject.cpp  CObject.h  CPed.cpp  CPed.h  CPedManager.cpp  CPedManager.h  CPhysics.cpp  CPhysics.h  CPlayerPed.cpp  CPlayerPed.h  (+40 more)
plugin_III/: CMakeLists.txt  CNodeAddress.h  plugin.h  plugin_III.h
plugin_III/events/: Events_III.cpp  Events_III.h
plugin_III/extender/: ObjectExtender_III.h  PedExtender_III.h  VehicleExtender_III.h
plugin_III/extensions/: Config.h  KeyCheck.h  Paths.h  Screen.cpp  ScriptCommands.cpp  ScriptCommands.h
plugin_III/game_III/: AnimBlendFrameData.h  AssocGroupId.h  C2dEffect.cpp  C2dEffect.h  C2deffectsModelInfo.cpp  C2deffectsModelInfo.h  C3dMarker.cpp  C3dMarker.h  C3dMarkers.cpp  C3dMarkers.h  CAccident.cpp  CAccident.h  CAccidentManager.cpp  CAccidentManager.h  CAnimBlendAssocGroup.cpp  CAnimBlendAssocGroup.h  CAnimBlendAssociation.cpp  CAnimBlendAssociation.h  CAnimBlendClumpData.cpp  CAnimBlendClumpData.h  CAnimBlendHierarchy.cpp  CAnimBlendHierarchy.h  CAnimBlendLink.h  CAnimBlendNode.cpp  CAnimBlendNode.h  CAnimBlendSequence.cpp  CAnimBlendSequence.h  CAnimBlock.h  CAnimManager.cpp  CAnimManager.h  CAnimationStyleDescriptor.h  CAntenna.cpp  CAntenna.h  CAntennas.cpp  CAntennas.h  CAudioHydrant.cpp  CAudioHydrant.h  CAutoPilot.cpp  CAutoPilot.h  CAutomobile.cpp  (+512 more)
plugin_III/plbase/: PluginBase_III.cpp  PluginBase_III.h
plugin_III/proj/: plugin_III.vcxproj  plugin_III.vcxproj.filters  plugin_iii_vs2010.vcxproj  plugin_iii_vs2010.vcxproj.filters
plugin_IV/: CMakeLists.txt  plugin_IV.h
plugin_IV/game_IV/: CAmmoData.cpp  CAmmoData.h  CAutomobile.cpp  CAutomobile.h  CBaseDC.cpp  CBaseDC.h  CBike.cpp  CBike.h  CBoat.cpp  CBoat.h  CCam.cpp  CCam.h  CCamFollowPed.cpp  CCamFollowPed.h  CCamFollowVehicle.cpp  CCamFollowVehicle.h  CCamGame.cpp  CCamGame.h  CCamIdle.cpp  CCamIdle.h  CCamScriptInstruction.cpp  CCamScriptInstruction.h  CCamera.cpp  CCamera.h  CCheat.cpp  CCheat.h  CClock.cpp  CClock.h  CColPoint.h  CControl.cpp  CControl.h  CControlMgr.cpp  CControlMgr.h  CControllerConfigManager.cpp  CControllerConfigManager.h  CCoronas.cpp  CCoronas.h  CCredits.cpp  CCredits.h  CCutsceneMgr.cpp  (+204 more)
plugin_iii_unreal/: CMakeLists.txt  plugin_III_unreal.h
plugin_iii_unreal/game_iii_unreal/: CRect.h  CVector.cpp  CVector.h  CVector2D.cpp  CVector2D.h  RenderWare.cpp  RenderWare.h  common.h
plugin_sa/: CMakeLists.txt  CTaskComplexSequence.cpp  CTaskComplexSequence.h  plugin.h  plugin_sa.h
plugin_sa/additional/: Error.h  Other.cpp  Other.h
plugin_sa/comp/: PluginSupport.cpp  PluginSupport.h  PluginsCompatibility.cpp  PluginsCompatibility.h
plugin_sa/events/: EventList.cpp  EventList.h  Events_SA.cpp  Events_SA.h  temp.h
plugin_sa/extender/: ObjectExtender.h  ObjectExtender_SA.h  PedExtender.h  PedExtender_SA.h  VehicleExtender.h  VehicleExtender_SA.h
plugin_sa/extensions/: Config.cpp  Config.h  DynamicResource.cpp  DynamicResource.h  KeyCheck.cpp  KeyCheck.h  Paths.cpp  Screen.cpp  Screen.h  ScriptCommands.cpp  ScriptCommands.h  Shader.cpp  Shader.h
plugin_sa/game_sa/: AnimAssociationData.h  AnimBlendFrameData.h  AnimationEnums.h  AnimationId.h  BreakManager_c.cpp  BreakManager_c.h  C2dEffect.h  C3dMarker.cpp  C3dMarker.h  C3dMarkers.cpp  C3dMarkers.h  CAEAudioChannel.h  CAEAudioEntity.cpp  CAEAudioEntity.h  CAEAudioHardware.cpp  CAEAudioHardware.h  CAECollisionAudioEntity.cpp  CAECollisionAudioEntity.h  CAECutsceneTrackManager.cpp  CAECutsceneTrackManager.h  CAEDoorAudioEntity.cpp  CAEDoorAudioEntity.h  CAEExplosionAudioEntity.h  CAEFireAudioEntity.h  CAEFrontendAudioEntity.cpp  CAEFrontendAudioEntity.h  CAEMP3BankLoader.cpp  CAEMP3BankLoader.h  CAEPedAudioEntity.h  CAEPedSpeechAudioEntity.h  CAEPedlessSpeechAudioEntity.cpp  CAEPedlessSpeechAudioEntity.h  CAEPoliceScannerAudioEntity.h  CAERadioTrackManager.cpp  CAERadioTrackManager.h  CAEScriptAudioEntity.cpp  CAEScriptAudioEntity.h  CAESound.cpp  CAESound.h  CAEStreamThread.cpp  (+1298 more)
plugin_sa/plbase/: PluginBase.cpp  PluginBase.h  PluginBase_SA.cpp  PluginBase_SA.h
plugin_sa/proj/: plugin_sa.vcxproj  plugin_sa.vcxproj.filters  plugin_sa_vs2010.vcxproj  plugin_sa_vs2010.vcxproj.filters  proj.licenseheader
plugin_vc/: CMakeLists.txt  plugin.h  plugin_vc.h
plugin_vc/events/: Events_VC.cpp  Events_VC.h
plugin_vc/extender/: ObjectExtender_VC.h  PedExtender_VC.h  VehicleExtender_VC.h
plugin_vc/extensions/: Config.cpp  Config.h  KeyCheck.cpp  KeyCheck.h  Screen.cpp  Screen.h  ScriptCommands.cpp  ScriptCommands.h
plugin_vc/game_vc/: AnimAssociationData.h  AnimBlendFrameData.h  AssocGroupId.h  C3dMarker.cpp  C3dMarker.h  C3dMarkers.cpp  C3dMarkers.h  CAnimBlendAssocGroup.h  CAnimBlendAssociation.cpp  CAnimBlendAssociation.h  CAnimBlendClumpData.h  CAnimBlock.h  CAnimManager.cpp  CAnimManager.h  CAnimationStyleDescriptor.h  CAutoPilot.h  CAutomobile.cpp  CAutomobile.h  CBaseModelInfo.cpp  CBaseModelInfo.h  CBike.cpp  CBike.h  CBoat.cpp  CBoat.h  CBox.cpp  CBox.h  CBrightLights.cpp  CBrightLights.h  CBuilding.cpp  CBuilding.h  CBulletInfo.cpp  CBulletInfo.h  CBulletTrace.cpp  CBulletTrace.h  CBulletTraces.cpp  CBulletTraces.h  CCam.h  CCamera.cpp  CCamera.h  CCarAI.cpp  (+375 more)
plugin_vc/plbase/: PluginBase_VC.cpp  PluginBase_VC.h
plugin_vc/proj/: dxsdk_customprops.xml  (+5 more)
(+2700 files in other folders)
